Create generic static pages

--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -1,6 +1,6 @@
 {% extends "navbar.html" %}
 
-{% block title %} <title>About Us</title> {% endblock %}
+{% block title %} <title>Contact</title> {% endblock %}
 
 {% block content %}
 <h1>
