--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-</head>
-    <body>
-    <!--Add a registration form here -->
-    </body>
-</html>
+{% extends "navbar.html" %}
+
+{% block title %} <title>Registration</title> {% endblock %}
+
+{% block content %}
+  <form action="{% url 'djangoapp:registration' %}" method="post" class="col-lg-6 offset-lg-3 ">
+        <h1>Sign Up</h1>
+        <hr>
+        <div class="form-group" >
+            <label for="username" class="form-label">Username</label>
+            <input type="username" class="form-control" name="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="firstname" class="form-label">First Name</label>
+            <input type="firstname" class="form-control" name="firstname" placeholder="First Name">
+        </div>
+        <div class="form-group">
+            <label for="lastname" class="form-label">Last Name</label>
+            <input type="lastname" class="form-control" name="lastname" placeholder="Last Name">
+        </div>
+        <div class="form-group">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+
+{% endblock %}
