--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+{% extends "navbar.html" %}
 
-    <body>
+{% block title %} <title>Reviews</title> {% endblock %}
 
-    <!--Add a nav bar here -->
+{% block content %}
 
-    <!-- Add reviews as cards -->
-
-    </body>
-
-</html>
+<h2> Reviews for {{ review.dealership }} </h2>
+<div class="card-columns" style="width: 75rem">
+    {% for review in reviews %}
+        <div class="card">
+            {% if review.sentiment == "positive" %}
+                <img class="card-img-left" src="../../../media/emoji/positive.png" height="40rem">
+            {% endif %}
+            {% if review.sentiment == "negative" %}
+                <img class="card-img-left" src="../../../media/emoji/negative.png" height="40rem">
+            {% endif %}
+            {% if review.sentiment == "neutral" %}
+                <img class="card-img-left" src="../../../media/emoji/neutral.png" height="40rem">
+            {% endif %}
+            <div class="card-body" style="background-color:#e9e7e7">
+                <h5 class="card-title">
+                    {{ review.car_model }}, {{ review.car_make }}
+                </h5>
+                <h5 class="card-title">
+                    {{ review.car_year }}
+                </h5>
+                <p class="card-text">
+                    {{ review.review }}
+                </p>
+            </div>
+        </div>
+    {% endfor %}
+</div>
+{% endblock %}
