--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+{% extends "navbar.html" %}
 
-</head>
-    <body>
-    <!--Add review form here -->
-    </body>
-</html>
+{% block title %} <title>Add Review</title> {% endblock %}
+
+{% block content %}
+<script type="text/javascript">
+    $('.date-own').datepicker({
+       format: 'mm/dd/yyyy'
+     });
+</script>
+
+
+<form action="{% url 'djangoapp:add_review' dealerId%}" method="post" class="col-lg-6 offset-lg-3">
+    <h1>Add Review</h1>
+    <hr>
+    Enter the review content:
+    <textarea class="form-control" id="content" name="content" rows="2" required></textarea>
+    <input class="form-check-input" type="checkbox" name="purchasecheck" id="purchasecheck"> Has purchased the car from {{dealer.full_name}} ?
+    <select name="car" id="car" class="form-select" required>
+        {% for car in cars %}
+            <option selected value={{car.id}}>{{car.name}}-{{car.make.name}}-{{ car.year|date:"Y" }}</option>
+        {% endfor %}
+   </select><br>
+   Select your purchase date:
+   <input class="date-own form-control" type="text" name="purchasedate" id="purchasedate">
+   {% csrf_token %}
+   <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+
+{% endblock %}
